<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Gabriela Perez</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">
        You know, I\'ve always been collected, calm and chill
        \nAnd you know, I never look for conflict for the thrill
        \nBut if I\'m feeling someone stepping towards you
        \nCan\'t describe just what I\'m feeling
        \n\nFor you, I\'d go step to a dude much bigger than me
        \nFor you, I know, I would get messed up, weigh 153
        \nFor you, I would get beat to smithereens
        \n\nYou know, I\'ll be in the corner taking notes
        \nAnd you know-ow
        \nI got your six while you\'re working votes
        \nBut if I\'m feeling someone stepping towards you
        \nCan\'t describe just what I\'m feeling
        \n\nFor you, I\'d go step to a dude much bigger than me
        \nFor you, I know, I would get messed up, weigh 153
        \nFor you, I would get beat to smithereens
        \n\nYou know I had to do one
        \nYou know I had to do one
        \nYou know I had to do one on the record for you
        \n\nYou know I had to do one on the record for her like this
        \nYou know I had to do one on the record for her like this
        \nYou know I had to do one on the record for her like this
        \nYou know I had to do one on the record for her
        \n\nFeeling someone stepping towards you
        \nCan\'t describe just what I\'m feeling
        \nFor you, I\'d go write a slick song just to show you the world
        \nFor you, I know they think it\'s messed up to sell out for your girl
        \n\nFor you, I\'d go step to a dude much bigger than me
        \nFor you, I know I would get messed up, weigh 153
        \nFor you, I would get beat to smithereens
        \n
    </string>
    <string name="green_micro">Green Micro</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>